# ragasDocs

./: 404.html  README.md  build_docs.sh  index.html  mkdocs.yml  objects.inv  package.json  pyproject.toml  sitemap.xml  vercel.json
.cache/plugin/git-committers/: page-authors.json
about/: index.html
docs/: about.md  index.md  module.ipynb  references.md
docs/extra/: style.css
docs/getting_started/: index.md  joel.md  next_steps.md
getting_started/: index.html
getting_started/next_steps/: index.html
module/: index.html
ragasdocs/: module1.py
references/: index.html
search/: search_index.json
