[tool.poetry]
name = "ragasdocs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocstrings = {extras = ["python"], version = "^0.25.2"}
mkdocs-jupyter = "^0.24.8"
matplotlib = "^3.9.2"
mike = "^2.1.3"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.33"
mkdocs-jupyter = "^0.24.8"
mkdocstrings = {extras = ["python"], version = "^0.25.2"}
mike = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
